# KitsunEngine

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  LICENSE.md  README.md  main.cpp
audio/: CMakeLists.txt
audio/include/: Audio.hpp
cmake/: os.cmake
firstparty/: CMakeLists.txt
include/N1ghtTheF0x/: KitsunEngine.hpp
include/N1ghtTheF0x/KitsunEngine/: App.hpp  Core.hpp  Utils.hpp
include/N1ghtTheF0x/KitsunEngine/Core/: Context.hpp  Display.hpp
include/N1ghtTheF0x/KitsunEngine/Utils/: Date.hpp  Logger.hpp  Macros.hpp  OpenGL.hpp  SDL.hpp  String.hpp  Types.hpp
input/: CMakeLists.txt
input/include/: Input.hpp
input/source/: keyboard.cpp  mouse.cpp
media/: CMakeLists.txt
media/include/: Audio.hpp  Image.hpp
media/source/: wav.cpp
renderer/: CMakeLists.txt
renderer/include/: Renderer.hpp
renderer/source/: context.cpp  draws.cpp
source/: app.cpp  app_desktop.cpp
source/core/: context.cpp  context_desktop.cpp  display_desktop.cpp
source/utils/: date.cpp  logger.cpp  opengl.cpp  sdl.cpp  string.cpp
utils/: CMakeLists.txt
utils/include/: Utils.hpp
utils/source/: array.cpp  buffer.cpp  color.cpp  date.cpp  file.cpp  logger.cpp  misc.cpp  random.cpp  rect.cpp  vector.cpp
window/: CMakeLists.txt  linux.cpp  win32.cpp  window.cpp
window/include/: Window.hpp
